--- a/castester/castester.csproj
+++ b/castester/castester.csproj
@@ -54,6 +54,13 @@
     <Reference Include="System.Web.ApplicationServices" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Login.ascx.cs">
+      <DependentUpon>Login.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Login.ascx.designer.cs">
+      <DependentUpon>Login.ascx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Settings.ascx.cs">
       <DependentUpon>Settings.ascx</DependentUpon>
@@ -64,6 +71,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Login.ascx" />
     <Content Include="Settings.ascx" />
   </ItemGroup>
   <ItemGroup>
