--- a/castester/castester.csproj
+++ b/castester/castester.csproj
@@ -78,6 +78,9 @@
     <Content Include="App_LocalResources\Login.ascx.resx" />
     <Content Include="App_LocalResources\Settings.ascx.resx" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="OpenID_Install.dnn" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
   <ProjectExtensions>
