change login format to remove openid stuff

--- a/castester/castester.csproj
+++ b/castester/castester.csproj
@@ -79,7 +79,7 @@
     <Content Include="App_LocalResources\Settings.ascx.resx" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="OpenID_Install.dnn" />
+    <None Include="Cas_Install.dnn" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
